@@ -84,60 +84,6 @@
 "_comment": " [CATEGORY]: MISC - NAMES",
 
 
-"_comment": " [CATEGORY]: ALCHEMY - NAMES",
-
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "§7Minor Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "§aLesser Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "§dMiraculous Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "§eMedium Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "§9Greater Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "§6Major Energy Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "§7Minor Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "§aLesser Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "§dMiraculous Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "§eMedium Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "§9Greater Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "§6Major Health Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "§7Minor Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "§aLesser Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "§dMiraculous Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "§eMedium Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "§9Greater Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "§6Major Loot Bonus Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "§7Minor Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "§aLesser Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "§dMiraculous Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "§eMedium Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "§9Greater Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "§6Major Mana Regen Buff Potion ",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_1": "§7Minor Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_10": "§aLesser Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_100": "§dMiraculous Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_25": "§eMedium Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_50": "§9Greater Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.energy.potion_lvl_75": "§6Major Instant Energy Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_1": "§7Minor Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_10": "§aLesser Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_100": "§dMiraculous Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_25": "§eMedium Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_50": "§9Greater Instant Health Potion",
-	"item.mmorpg.alchemy.instant.health.potion_lvl_75": "§6Major Instant Health Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_1": "§7Minor Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_10": "§aLesser Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_100": "§dMiraculous Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_25": "§eMedium Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_50": "§9Greater Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.mana.potion_lvl_75": "§6Major Instant Mana Potion",
-	"item.mmorpg.alchemy.instant.misc.lesser_recall_potion": "§eMedium Recall Potion",
-	"item.mmorpg.alchemy.instant.misc.regret10": "§aLesser Potion of Stat Regret",
-	"item.mmorpg.alchemy.instant.misc.remove_spell": "§7 Potion of Single Spell Removal",
-	"item.mmorpg.alchemy.instant.misc.remove_talent": "§7 Potion of Single Talent Removal",
-	"item.mmorpg.alchemy.instant.misc.reset_spells": "§aLesser Potion of Reset Spells",
-	"item.mmorpg.alchemy.instant.misc.reset_talents": "§7Minor Potion of Reset Talents",
-
-"_comment": " [CATEGORY]: ALCHEMY - NAMES",
-
-
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 	"mmorpg.affix.arcanists": "Arcanist's",
@@ -234,6 +180,60 @@
 "_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
+"_comment": " [CATEGORY]: ALCHEMY - NAMES",
+
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_1": "§7Minor Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_10": "§aLesser Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_100": "§dMiraculous Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_25": "§eMedium Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_50": "§9Greater Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.ene_regen.potion_lvl_75": "§6Major Energy Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_1": "§7Minor Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_10": "§aLesser Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_100": "§dMiraculous Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_25": "§eMedium Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_50": "§9Greater Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.hp_regen.potion_lvl_75": "§6Major Health Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_1": "§7Minor Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_10": "§aLesser Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_100": "§dMiraculous Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_25": "§eMedium Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_50": "§9Greater Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.loot_bonus.potion_lvl_75": "§6Major Loot Bonus Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_1": "§7Minor Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_10": "§aLesser Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_100": "§dMiraculous Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_25": "§eMedium Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_50": "§9Greater Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.buff.mana_regen.potion_lvl_75": "§6Major Mana Regen Buff Potion ",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_1": "§7Minor Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_10": "§aLesser Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_100": "§dMiraculous Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_25": "§eMedium Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_50": "§9Greater Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.energy.potion_lvl_75": "§6Major Instant Energy Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_1": "§7Minor Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_10": "§aLesser Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_100": "§dMiraculous Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_25": "§eMedium Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_50": "§9Greater Instant Health Potion",
+	"item.mmorpg.alchemy.instant.health.potion_lvl_75": "§6Major Instant Health Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_1": "§7Minor Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_10": "§aLesser Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_100": "§dMiraculous Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_25": "§eMedium Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_50": "§9Greater Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.mana.potion_lvl_75": "§6Major Instant Mana Potion",
+	"item.mmorpg.alchemy.instant.misc.lesser_recall_potion": "§eMedium Recall Potion",
+	"item.mmorpg.alchemy.instant.misc.regret10": "§aLesser Potion of Stat Regret",
+	"item.mmorpg.alchemy.instant.misc.remove_spell": "§7 Potion of Single Spell Removal",
+	"item.mmorpg.alchemy.instant.misc.remove_talent": "§7 Potion of Single Talent Removal",
+	"item.mmorpg.alchemy.instant.misc.reset_spells": "§aLesser Potion of Reset Spells",
+	"item.mmorpg.alchemy.instant.misc.reset_talents": "§7Minor Potion of Reset Talents",
+
+"_comment": " [CATEGORY]: ALCHEMY - NAMES",
+
+
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
 
 	"mmorpg.set.archemage_vestments": "Mage's Robes",
@@ -270,6 +270,26 @@
 "_comment": " [CATEGORY]: ITEM SETS - NAMES",
 
 
+"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
+
+	"mmorpg.advancement.title.addaffix": "Add Affix",
+	"mmorpg.advancement.title.currencybag": "Currency Bag",
+	"mmorpg.advancement.title.factorystation": "Factory Station",
+	"mmorpg.advancement.title.firstadventuremap": "First Adventure Map!",
+	"mmorpg.advancement.title.level": "Level",
+	"mmorpg.advancement.title.levelpenalty": "Level Penalty",
+	"mmorpg.advancement.title.lootbag": "Loot Bag",
+	"mmorpg.advancement.title.mapbag": "Map Bag",
+	"mmorpg.advancement.title.mapdevice": "Map Device",
+	"mmorpg.advancement.title.masterbag": "Master Bag",
+	"mmorpg.advancement.title.modifystation": "Modify Station",
+	"mmorpg.advancement.title.repairstation": "Repair Station",
+	"mmorpg.advancement.title.salvagestation": "Salvage Station",
+	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
+
+"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
+
+
 "_comment": " [CATEGORY]: LOOTBOXES - NAMES",
 
 	"item.mmorpg.lootbox.big_currency_lootbox_3": "§9Epic Big Currency Treasure Box",
@@ -292,26 +312,6 @@
 	"item.mmorpg.lootbox.small_gear_lootbox_5": "§dMythical Small Gear Treasure Box",
 
 "_comment": " [CATEGORY]: LOOTBOXES - NAMES",
-
-
-"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
-
-	"mmorpg.advancement.title.addaffix": "Add Affix",
-	"mmorpg.advancement.title.currencybag": "Currency Bag",
-	"mmorpg.advancement.title.factorystation": "Factory Station",
-	"mmorpg.advancement.title.firstadventuremap": "First Adventure Map!",
-	"mmorpg.advancement.title.level": "Level",
-	"mmorpg.advancement.title.levelpenalty": "Level Penalty",
-	"mmorpg.advancement.title.lootbag": "Loot Bag",
-	"mmorpg.advancement.title.mapbag": "Map Bag",
-	"mmorpg.advancement.title.mapdevice": "Map Device",
-	"mmorpg.advancement.title.masterbag": "Master Bag",
-	"mmorpg.advancement.title.modifystation": "Modify Station",
-	"mmorpg.advancement.title.repairstation": "Repair Station",
-	"mmorpg.advancement.title.salvagestation": "Salvage Station",
-	"mmorpg.advancement.title.welcomemineandslash": "Welcome to Mine and Slash!",
-
-"_comment": " [CATEGORY]: ADVANCEMENT TITLES - NAMES",
 
 
 "_comment": " [CATEGORY]: RUNE WORDS - NAMES",
